Added background video and some sections

--- a/index.html
+++ b/index.html
@@ -8,6 +8,25 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>First Heading</h1>
+    <div id="complete">
+        <div class="home">
+            <video autoplay muted loop id="myVideo">
+                <source src="background.mp4" type="video/mp4">
+            </video>
+            <div class="content">
+                <div class="liked">
+                    <div class="subheader">
+                        <h3>Liked Songs</h3>
+                    </div>
+                </div>
+                <div class="playlist">
+                    <div class="subheader">
+                        <h3>Playlist</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
+    </div>
 </body>
 </html>
