--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="content">
                 <div class="liked">
                     <div class="subheader">
-                        <h3>Liked Songs</h3>
+                        <h3>Home</h3>
                     </div>
                 </div>
                 <div class="playlist">
