--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;700&family=Ubuntu&display=swap" rel="stylesheet">
+<!-- FONT AWESOME -->
+<script src="https://kit.fontawesome.com/bfe7c45ec2.js" crossorigin="anonymous"></script>
     <script src="/index.js"></script>
     <link rel="stylesheet" href="/index.css">
     <title>Document</title>
@@ -10,18 +13,17 @@
 <body>
     <div id="complete">
         <div class="home">
-            <video autoplay muted loop id="myVideo">
+            <!-- <video autoplay muted loop id="myVideo">
                 <source src="background.mp4" type="video/mp4">
-            </video>
+            </video> -->
             <div class="content">
-                <div class="liked">
-                    <div class="subheader">
-                        <h3>Home</h3>
-                    </div>
+                <div class="navbar">
+                    <div class="btn"><i class="fa-solid fa-house"></i>Home</div>
+                    <div class="btn"><i class="fa-solid fa-magnifying-glass"></i>Search</div>
                 </div>
                 <div class="playlist">
                     <div class="subheader">
-                        <h3>Playlist</h3>
+                        <div><i class="fa-solid fa-books"></i><i class="fa-solid fa-plus"></i>Playlist</div>
                     </div>
                 </div>
             </div>
@@ -30,3 +32,10 @@
     </div>
 </body>
 </html>
+
+<!-- <i class="fa-solid fa-play"></i>
+<i class="fa-solid fa-pause"></i>
+<i class="fa-solid fa-forward"></i>
+<i class="fa-solid fa-backward"></i>
+<i class="fa-solid fa-heart"></i>
+<i class="fa-solid fa-ellipsis"></i> -->
