--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
             </video> -->
             <div class="content">
                 <div class="navbar">
-                    <div class="btn"><i class="fa-solid fa-house"></i>Home</div>
-                    <div class="btn"><i class="fa-solid fa-magnifying-glass"></i>Search</div>
+                    <div class="btn"><i class="fa-solid fa-house iconspacing"></i>Home</div>
+                    <div class="btn"><i class="fa-solid fa-magnifying-glass iconspacing"></i>Search</div>
                 </div>
                 <div class="playlist">
                     <div class="subheader">
-                        <div><i class="fa-solid fa-books"></i><i class="fa-solid fa-plus"></i>Playlist</div>
+                        <div><i class="fa-solid fa-books iconspacing"></i><i class="fa-solid fa-plus iconspacing"></i>Playlist</div>
                     </div>
                 </div>
             </div>
