--- a/index.html
+++ b/index.html
@@ -23,7 +23,12 @@
                 </div>
                 <div class="playlist">
                     <div class="subheader">
-                        <div><i class="fa-solid fa-books iconspacing"></i><i class="fa-solid fa-plus iconspacing"></i>Playlist</div>
+                        <div class="btn btnhead"><i class="fa-solid fa-book-open iconspacing"></i>Playlist
+                            <div class="create"><i class="fa-solid fa-plus iconspacing iconright"></i></div>
+                        </div>
+                    </div>
+                    <div class="likedSongs btn">
+                        Liked Songs
                     </div>
                 </div>
             </div>
