Modified middle section

--- a/index.html
+++ b/index.html
@@ -32,6 +32,14 @@
                     </div>
                 </div>
             </div>
+            <div class="songs">
+                <div class="carousel">
+                    
+                </div>
+            </div>
+            <div class="playsection">
+                Play
+            </div>
         </div>
         
     </div>
