Added Search bar in music section

--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
                 </div>
             </div>
             <div class="songs">
+                <div class="search">
+                    <input type="text" placeholder="Search..">
+                </div>
                 <div class="carousel">
                     
                 </div>
