added photo cover section

--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
                 </div>
             </div>
             <div class="playsection">
-                Play
+                <div class="photo">
+                    
+                </div>
             </div>
         </div>
         
