Added a section for new playlists, hide search bar

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
                     <div class="likedSongs btn">
                         Liked Songs
                     </div>
+                    <div class="playlists">
+                        Playlist1
+                    </div>
                 </div>
             </div>
             <div class="songs">
