--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;700&family=Ubuntu&display=swap" rel="stylesheet">
 <!-- FONT AWESOME -->
-<script src="https://kit.fontawesome.com/bfe7c45ec2.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/bfe7c45ec2.js" crossorigin="anonymous"></script>
     <script src="/index.js"></script>
+    
+    <!-- Custom CSS -->
     <link rel="stylesheet" href="/index.css">
     <title>Document</title>
 </head>
@@ -43,7 +45,11 @@
                     
                 </div>
                 <div class="songssection">
-                    Hello
+                    <div class="grid text-center">
+                        <div class="g-col-6 g-col-md-4">.g-col-6 .g-col-md-4</div>
+                        <div class="g-col-6 g-col-md-4">.g-col-6 .g-col-md-4</div>
+                        <div class="g-col-6 g-col-md-4">.g-col-6 .g-col-md-4</div>
+                      </div>
                 </div>
             </div>
             <!-- <div class="playsection">
