--- a/index.html
+++ b/index.html
@@ -66,99 +66,122 @@
                       </div>
                 </div>
                 <div class="songssection">
-                    <div class="row row-cols-1 row-cols-md-3 g-">
-                        <div class="col-md-3 col-sm-6 col-xs-12 cardcontent">
+                    <div class="row row-cols-1 row-cols-md-3 g-4">
+                        <div class="col-md-4 col-sm-6 col-xs-12 cardcontent">
                           <div class="card h-100">
+                            <div>
                             <img src="/covers/1.jpg" class="card-img-top" alt="...">
                             <div class="song-info">
                                 <h6 class="music-name">Song 1</h6>
                                 <p class="duration">03:54</p>
                             </div>
+                        </div>
                           </div>
                         </div>
-                        <div class="col-md-3 col-sm-6 col-xs-12 cardcontent">
+                        <div class="col-md-4 col-sm-6 col-xs-12 cardcontent">
                           <div class="card h-100">
+                            <div>
                             <img src="/covers/2.jpg" class="card-img-top" alt="...">
                             <div class="song-info">
                                 <h6 class="music-name">Song 2</h6>
                                 <p class="duration">03:54</p>
                             </div>
+                        </div>
                           </div>
                         </div>
-                        <div class="col-md-3 col-sm-6 col-xs-12 cardcontent">
+                        <div class="col-md-4 col-sm-6 col-xs-12 cardcontent">
                           <div class="card h-100">
+                            <div>
                             <img src="/covers/3.jpg" class="card-img-top" alt="...">
                             <div class="song-info">
                                 <h6 class="music-name">Song 3</h6>
                                 <p class="duration">03:54</p>
                             </div>
+                        </div>
                           </div>
                         </div>
-                        <div class="col-md-3 col-sm-6 col-xs-12 cardcontent">
+                        <div class="col-md-4 col-sm-6 col-xs-12 cardcontent">
                           <div class="card h-100">
+                            <div>
                             <img src="/covers/4.jpg" class="card-img-top" alt="...">
                             <div class="song-info">
                                 <h6 class="music-name">Song 4</h6>
                                 <p class="duration">03:54</p>
                             </div>
+                        </div>
                           </div>
                         </div>
-                        <div class="col-md-3 col-sm-6 col-xs-12 cardcontent">
+                        <div class="col-md-4 col-sm-6 col-xs-12 cardcontent">
                             <div class="card h-100">
+                                <div>
                               <img src="/covers/5.jpg" class="card-img-top" alt="...">
                               <div class="song-info">
                                 <h6 class="music-name">Song 5</h6>
                                 <p class="duration">03:54</p>
                             </div>
+                        </div>
                             </div>
                           </div>
-                          <div class="col-md-3 col-sm-6 col-xs-12 cardcontent">
+                          <div class="col-md-4 col-sm-6 col-xs-12 cardcontent">
                             <div class="card h-100">
+                                <div>
                               <img src="/covers/6.jpg" class="card-img-top" alt="...">
                               <div class="song-info">
                                 <h6 class="music-name">Song 6</h6>
                                 <p class="duration">03:54</p>
                             </div>
+                        </div>
                             </div>
                           </div>
-                          <div class="col-md-3 col-sm-6 col-xs-12 cardcontent">
+                          <div class="col-md-4 col-sm-6 col-xs-12 cardcontent">
                             <div class="card h-100">
+                                <div>
                               <img src="/covers/7.jpg" class="card-img-top" alt="...">
                               <div class="song-info">
                                 <h6 class="music-name">Song 7</h6>
                                 <p class="duration">03:54</p>
                             </div>
+                        </div>
                             </div>
                           </div>
-                          <div class="col-md-3 col-sm-6 col-xs-12 cardcontent">
+                          <div class="col-md-4 col-sm-6 col-xs-12 cardcontent">
                             <div class="card h-100">
+                                <div>
                               <img src="/covers/8.jpg" class="card-img-top" alt="...">
                               <div class="song-info">
                                 <h6 class="music-name">Song 8</h6>
                                 <p class="duration">03:54</p>
                             </div>
+                        </div>
                             </div>
                           </div>
-                          <div class="col-md-3 col-sm-6 col-xs-12 cardcontent">
+                          <div class="col-md-4 col-sm-6 col-xs-12 cardcontent">
                             <div class="card h-100">
+                                <div>
                               <img src="/covers/9.jpg" class="card-img-top" alt="...">
                               <div class="song-info">
                                 <h6 class="music-name">Song 9</h6>
                                 <p class="duration">03:54</p>
                             </div>
+                        </div>
                             </div>
                           </div>
-                          <div class="col-md-3 col-sm-6 col-xs-12 cardcontent">
+                          <div class="col-md-4 col-sm-6 col-xs-12 cardcontent">
                             <div class="card h-100">
+                                <div>
                               <img src="/covers/10.jpg" class="card-img-top" alt="...">
                               <div class="song-info">
                                 <h6 class="music-name">Song 10</h6>
                                 <p class="duration">03:54</p>
                             </div>
+                        </div>
                             </div>
                           </div>
                       </div>
                 </div>
+            </div>
+            <div class="playsection">
+                Hello
             </div>
         </div>
         
