--- a/index.html
+++ b/index.html
@@ -181,11 +181,16 @@
                 </div>
             </div>
             <div class="playsection">
-                Hello
+                <div class="photo">
+                    <img src="/covers/1.jpg" class="d-block w-100" alt="...">
+                </div>
             </div>
         </div>
         
-    </div>
+  </div>
+  <div class="playpause">
+
+  </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
