--- a/index.html
+++ b/index.html
@@ -39,35 +39,12 @@
                 </div>
             </div>
             <div class="songs">
-                <div class="search">
-                    <input type="text" placeholder="Search..">
+                <div class="playpause">
+                    
                 </div>
-                <!-- <div class="carousel">
-                  <div id="carouselExampleRide" class="carousel slide" data-bs-ride="true">
-                    <div class="carousel-inner">
-                      <div class="carousel-item active">
-                        <img src="/covers/extra.jpg" class="d-block w-100" alt="...">
-                      </div>
-                      <div class="carousel-item">
-                        <img src="/covers/extra.jpg" class="d-block w-100" alt="...">
-                      </div>
-                      <div class="carousel-item">
-                        <img src="/covers/extra.jpg" class="d-block w-100" alt="...">
-                      </div>
-                    </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleRide" data-bs-slide="prev">
-                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                      <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleRide" data-bs-slide="next">
-                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                      <span class="visually-hidden">Next</span>
-                    </button>
-                  </div>
-                </div> -->
                 <div class="songssection">
                     <div class="row row-cols-1 row-cols-md-3 g-4">
-                        <div class="col-md-4 col-sm-6 col-xs-12 cardcontent">
+                        <div class="col-md-4 col-sm-12  cardcontent">
                           <div class="card h-100">
                             <div>
                             <img src="/covers/1.jpg" class="card-img-top" alt="...">
@@ -78,7 +55,7 @@
                         </div>
                           </div>
                         </div>
-                        <div class="col-md-4 col-sm-6 col-xs-12 cardcontent">
+                        <div class="col-md-4 col-sm-12  cardcontent">
                           <div class="card h-100">
                             <div>
                             <img src="/covers/2.jpg" class="card-img-top" alt="...">
@@ -89,7 +66,7 @@
                         </div>
                           </div>
                         </div>
-                        <div class="col-md-4 col-sm-6 col-xs-12 cardcontent">
+                        <div class="col-md-4 col-sm-12  cardcontent">
                           <div class="card h-100">
                             <div>
                             <img src="/covers/3.jpg" class="card-img-top" alt="...">
@@ -100,7 +77,7 @@
                         </div>
                           </div>
                         </div>
-                        <div class="col-md-4 col-sm-6 col-xs-12 cardcontent">
+                        <div class="col-md-4 col-sm-12  cardcontent">
                           <div class="card h-100">
                             <div>
                             <img src="/covers/4.jpg" class="card-img-top" alt="...">
@@ -111,7 +88,7 @@
                         </div>
                           </div>
                         </div>
-                        <div class="col-md-4 col-sm-6 col-xs-12 cardcontent">
+                        <div class="col-md-4 col-sm-12  cardcontent">
                             <div class="card h-100">
                                 <div>
                               <img src="/covers/5.jpg" class="card-img-top" alt="...">
@@ -122,7 +99,7 @@
                         </div>
                             </div>
                           </div>
-                          <div class="col-md-4 col-sm-6 col-xs-12 cardcontent">
+                          <div class="col-md-4 col-sm-12  cardcontent">
                             <div class="card h-100">
                                 <div>
                               <img src="/covers/6.jpg" class="card-img-top" alt="...">
@@ -133,7 +110,7 @@
                         </div>
                             </div>
                           </div>
-                          <div class="col-md-4 col-sm-6 col-xs-12 cardcontent">
+                          <div class="col-md-4 col-sm-12  cardcontent">
                             <div class="card h-100">
                                 <div>
                               <img src="/covers/7.jpg" class="card-img-top" alt="...">
@@ -144,7 +121,7 @@
                         </div>
                             </div>
                           </div>
-                          <div class="col-md-4 col-sm-6 col-xs-12 cardcontent">
+                          <div class="col-md-4 col-sm-12  cardcontent">
                             <div class="card h-100">
                                 <div>
                               <img src="/covers/8.jpg" class="card-img-top" alt="...">
@@ -155,7 +132,7 @@
                         </div>
                             </div>
                           </div>
-                          <div class="col-md-4 col-sm-6 col-xs-12 cardcontent">
+                          <div class="col-md-4 col-sm-12  cardcontent">
                             <div class="card h-100">
                                 <div>
                               <img src="/covers/9.jpg" class="card-img-top" alt="...">
@@ -166,7 +143,7 @@
                         </div>
                             </div>
                           </div>
-                          <div class="col-md-4 col-sm-6 col-xs-12 cardcontent">
+                          <div class="col-md-4 col-sm-12  cardcontent">
                             <div class="card h-100">
                                 <div>
                               <img src="/covers/10.jpg" class="card-img-top" alt="...">
@@ -181,16 +158,14 @@
                 </div>
             </div>
             <div class="playsection">
-                <div class="photo">
-                    <img src="/covers/1.jpg" class="d-block w-100" alt="...">
-                </div>
+              <div class="photo">
+                <img src="/covers/8.jpg" class="card-img-top" alt="...">
+              </div>
             </div>
         </div>
         
   </div>
-  <div class="playpause">
-
-  </div>
+  
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
