--- a/index.html
+++ b/index.html
@@ -20,19 +20,37 @@
                 <source src="background.mp4" type="video/mp4">
             </video> -->
             <div class="content">
-                <div class="navbar">
-                    <div class="btn"><i class="fa-solid fa-house iconspacing"></i>Home</div>
-                    <div class="btn"><i class="fa-solid fa-magnifying-glass iconspacing"></i>Search</div>
+                <div class="navbartop">
+                    <div class="btnbar"><i class="fa-solid fa-house iconspacing"></i>Home</div>
+                    <div class="btnbar"><i class="fa-solid fa-magnifying-glass iconspacing"></i>Search</div>
                 </div>
                 <div class="playlist">
                     <div class="subheader">
-                        <div class="btn btnhead"><i class="fa-solid fa-book-open iconspacing"></i>Playlist
+                        <div class="btnsub btnhead"><i class="fa-solid fa-book-open iconspacing"></i>Playlist
                             <div class="create"><i class="fa-solid fa-plus iconspacing iconright"></i></div>
                         </div>
                     </div>
-                    <div class="likedSongs btn">
+                    <div class="btnbar btnhead liked">
                         Liked Songs
                     </div>
+                    <div class="btnbar btnhead liked">
+                      Liked Songs
+                  </div>
+                  <div class="btnbar btnhead liked">
+                    Liked Songs
+                </div>
+                <div class="btnbar btnhead liked">
+                  Liked Songs
+              </div>
+              <div class="btnbar btnhead liked">
+                Liked Songs
+            </div>
+            <div class="btnbar btnhead liked">
+              Liked Songs
+          </div>
+<div class="btnbar btnhead liked">
+  Liked Songs
+</div>
                     <div class="playlists">
                         Playlist1
                     </div>
@@ -158,6 +176,9 @@
                 </div>
             </div>
             <div class="playsection">
+              <div class="playsectiontop">
+                  Hello
+              </div>
               <div class="photo">
                 <img src="/covers/8.jpg" class="card-img-top" alt="...">
               </div>
