--- a/index.html
+++ b/index.html
@@ -204,6 +204,17 @@
           </div>
           <div class="photo">
             <img src="/covers/8.jpg" class="card-img-top" alt="..." />
+            <div class="songdetails">
+              <div class="covermusicinfo">
+                <div class="covermusicname">
+                    Song 9
+                </div>
+                <div class="covericon">
+                  <i class="fa-solid fa-plus smallicon covericonone"></i>
+                  <i class="fas fa-solid fa-heart smallicon covericonone"></i>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -211,9 +222,11 @@
         <div class="playpause">
           <div class="bottom">
             <div class="icons">
-              <i class="fas fa-2x fa-step-backward" id="previous"></i>
+              <i class="fas fa-solid fa-heart smallicon"></i>
+              <i class="fas fa-2x fa-step-backward smallicon" id="previous"></i>
               <i class="fas fa-2x fa-play-circle" id="masterPlay"></i>
-              <i class="fas fa-2x fa-step-forward" id="next"></i>
+              <i class="fas fa-2x fa-step-forward smallicon" id="next"></i>
+              <i class=" fas fa-2xs fa-solid fa-repeat smallicon"></i>
               <div class="volumebar">
                 <i class="fa-solid fa-volume-low volumeicon"></i>
                 <input
