Refactored PlayPause section

--- a/index.html
+++ b/index.html
@@ -221,6 +221,11 @@
       <div class="footer">
         <div class="playpause">
           <div class="bottom">
+            <div class="footersong">
+              <img src="/covers/8.jpg" class="footercoverimg" alt="..." />
+              <div class="footersongname">Song 9</div>
+              <i class="fas fa-solid fa-heart smallicon footcovericon"></i>
+            </div>
             <div class="icons">
               <i class="fas fa-solid fa-heart smallicon"></i>
               <i class="fas fa-2x fa-step-backward smallicon" id="previous"></i>
